--- a/bff/client/index.css
+++ b/bff/client/index.css
@@ -1,6 +1,16 @@
 
-#open-keyboard {
+#actions-container {
     margin-bottom: 10px;
+}
+
+#error-container {
+    display: none;
+    color: red;
+    font-size:36px;
+}
+
+#error-container.errors {
+    display: block;
 }
 
 #table-container td {
