--- a/server/client/simple-readings-page.css
+++ b/server/client/simple-readings-page.css
@@ -6,7 +6,7 @@ body {
     display: inline-block;
     padding: 10px;
     background: white;
-    position: sticky;
+    position: fixed;
     top: 0px;
     z-index: 10;
 }
